# YaPPuccino

./: .gitignore  README.md  main.cpp  websocket_server.cpp  websocket_server.h
Cliente/YaPPuccinoClient/: CMakeLists.txt  Images.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui
Servidor/: BinaryMessageHandler.cpp  BinaryMessageHandler.h  HistoryManager.cpp  HistoryManager.h  server.cpp
Servidor/History/: general.txt
Servidor/History/private/: nate_testpython.txt
